# kgents

./: .gitignore  .markdownlint.json  404.html  AUTONOMOUS_BOOTSTRAP_PROTOCOL.md  BOOTSTRAP_DOCUMENTS_IMPROVEMENT_PLAN.md  BOOTSTRAP_PLAN.md  CHANGELOG.md  CLAUDE.compiled.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DGENTS_PHASE4_SUMMARY.md  DGENT_BOOTSTRAP_DIALECTIC.md  DGENT_IMPLEMENTATION_PLAN.md  EDGE_DISCOVERY_ENHANCEMENT.md  HANDOFF-living-spec.md  HANDOFF.md  HYDRATE.md  HYDRATE.phase4.md  H_GENTS_IMPLEMENTATION_SUMMARY.md  NOW.md  PHASE2_DELIVERABLES.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  SECURITY.md  SPEC_UPDATE_PROPOSAL.md  SYNERGY_REFACTOR_PLAN.md  ZENAGENTS_PROTOCOL.md  ZERO_SEED_API_WIRING_REPORT.md  mkdocs.yml  package-lock.json  pyproject.toml  reset-world.sh  sitemap.xml
impl/claude/: .dockerignore  .env.example  .gitignore  ANALYSIS_API_INTEGRATION.md  ANALYSIS_WITNESS_INTEGRATION.md  ANALYZE_HANDLER_IMPLEMENTATION.md  CONSTITUTIONAL_GENERALIZATION_SUMMARY.md  CRYSTAL_UI_IMPLEMENTATION.md  DP_BRIDGE_LLM_UPDATE.md  EVIDENCE_FIX_SUMMARY.md  EVOLUTION_DECISION_FRAMEWORK.md  E_GENTS_TEST_RESULTS.md  HANDOFF-test-failures.md  HYDRATE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  K_GENT_SESSION_SUMMARY.md  LOSS_WITNESS_NAVIGATION_IMPLEMENTATION.md  PHASE4_COMPLETION_SUMMARY.md  TELESCOPE_GRADIENTS_IMPLEMENTATION.md  TURN_SCHEMA_UNIFICATION.md  WITNESS_CRYSTAL_MIGRATION_PHASE3.md  __init__.py  alembic.ini  autopoiesis.py  conftest.py  demo_igents.py  demo_village_story.py  docker-compose.genesis.yml  docker-compose.yml  evolve.py  fix_fixture_returns.py  fix_test_annotations.py  load-test-results.json  mypy-baseline.txt  mypy.ini  package.json  plan_fixes.py  plan_fixes_simple.py  pnpm-lock.yaml  (+15 more)
impl/claude-openrouter/: PLAN.md  README.md  __init__.py  autopoiesis.py  evolve.py  plan_fixes_simple.py  pyproject.toml  self_improve.py
impl/claude-openrouter/agents/: __init__.py  types.py
impl/claude-openrouter/bootstrap/: __init__.py  compose.py  contradict.py  fix.py  ground.py  id.py  judge.py  sublate.py  types.py
impl/claude-openrouter/runtime/: __init__.py  base.py  cache.py  claude.py  cli.py  client.py  config.py  messages.py  openrouter.py  usage.py
impl/claude-openrouter/tests/: __init__.py  conftest.py  test_cache.py  test_client.py  test_config.py  test_llm_agents.py  test_messages.py  test_usage.py
impl/claude/.kgents/: history.db
impl/claude/_archived/: test_soul.py
impl/claude/agents/: __init__.py  conftest.py
impl/claude/bootstrap/: REGENERATION_VALIDATION_GUIDE.md  __deps__.py  __init__.py  compose.py  conftest.py  contradict.py  dna.py  fix.py  ground.py  ground_parser.py  id.py  judge.py  sublate.py  test_regeneration.py  types.py  umwelt.py
impl/claude/bootstrap_reference/: behavior_snapshot.json
impl/claude/compositions/: README.md  full-check.composition  post-impl.composition  pre-commit.composition  validate-spec.composition
impl/claude/data/: categorical_phase1_problems.json  phase1b_results_20251224_125336.json
impl/claude/demos/: HANDOFF_FOUNDRY_SYNTHESIS.md  agent_explorer.py  foundry_showcase.py  interactive_text_demo.py  marimo_projector_demo.py  memory_agent_sandbox.html  red_and_blue.py  stateful_memory_demo.py  text_transformer_sandbox.html  wasm_sandbox_demo.py
impl/claude/docs/: PHASE_2_5D_ANALYSIS.md  SILENT_FAILURES_REPORT.md  probe-battle-test-report.md  probe-quick-reference.md
impl/claude/dp/: __init__.py
impl/claude/field/: __init__.py  hdc_ops.py  holographic.py
impl/claude/fixtures/: README.md
impl/claude/hypha/: __init__.py  foraging.py  free_energy.py  hypha.py
impl/claude/infra/: __init__.py  ground.py  lifecycle.py  storage.py  synapse.py
impl/claude/models/: __init__.py  annotation.py  ashc.py  atelier.py  base.py  brain.py  coalition.py  composition.py  experiment.py  feed_feedback.py  gardener.py  gestalt.py  kblock.py  onboarding.py  park.py  sovereign.py  town.py  trail.py  verification.py  witness.py
impl/claude/monograph/: ARCHITECTURE.md  README.md  __init__.py  demo.py  generator.py  run_generator.py
impl/claude/nodes/: __init__.py  code_node.py  concept_node.py  void_node.py
impl/claude/pilots-web/: .gitignore  .player.culture.log.md  RUN036-ATTACK-ANIMATION-SUMMARY.md  RUN036-VISUAL-SPEC.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
impl/claude/plans/: continuation-ci-compartmentalization.md  continuation-warp-servo-phase2.md  continuation-warp-servo-session4.md  continuation-warp-servo-session5.md  continuation-warp-servo-session6.md  continuation-warp-servo-session7.md  navtree-refinement.md  nphase-native-integration-wave5-prompt.md  rename-warp-servo.md  tiny-atelier-phase5-8-prompt.md  tiny-atelier-phase6-8-continuation.md  web-refactor-continuation-prompt.md  web-refactor-phase3-continuation.md  web-refactor-phase4-continuation.md  web-refactor-phase5-continuation.md  witness-rename-strategy.md
impl/claude/poly/: __init__.py  interface.py  morphism.py  profunctor.py
impl/claude/protocols/: __init__.py  conftest.py  hypnagogic_refinery.py  mirror_stage.py  portal_protocol.py  tongue_parser.py
impl/claude/qa/: README.md  __init__.py  demo_glass_terminal.py  demo_turn_gents.py
impl/claude/runtime/: __init__.py  base.py  claude.py  cli.py  json_utils.py  morpheus.py  openrouter.py
impl/claude/scripts/: ashc_wasm_survivors_bootstrap.py  audit_agentese_paths.py  audit_di_providers.py  bootstrap_teaching_crystals.py  debug_categorical_probe.py  demo_analysis_service.py  demo_analysis_witness.py  demo_evidence_mining.py  demo_probe_operad.py  demo_soul_formulation.py  enrich_specgraph.py  migrate_membrane_to_postgres.py  record_crown_jewel_extinction.py  run_categorical_phase1_study.py  run_phase1_toy.py  run_phase1b_real.py  seed_differance.py  test_analysis_endpoint.py  test_auto_analysis.py  test_dp_llm_integration.py  test_probe_battle.sh  (+3 more)
impl/zen-agents/: INTEGRATION_PLAN.md  README.md  app.py  cli.py  demo.py  pyproject.toml
(+8447 files in other folders)
