[project]
name = "kgents-bootstrap"
version = "0.1.0"
description = "kgents reference implementation - 7 irreducible bootstrap agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bootstrap", "agents"]
