[project]
name = "kgents-bootstrap"
version = "0.1.0"
description = "kgents reference implementation - 7 irreducible bootstrap agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bootstrap", "agents", "runtime"]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.24"]
