[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kgents-runtime"
version = "0.1.0"
description = "kgents reference implementation - bootstrap agents and runtime"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agents", "ai", "composition", "category-theory"]
authors = [
    { name = "Kent" }
]
dependencies = [
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["bootstrap", "agents", "runtime", "protocols"]

[project.scripts]
kgents = "protocols.cli.hollow:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
# Suppress PytestCollectionWarning for dataclass/enum classes that start with "Test" or similar
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
# Custom markers for test categorization (Phase 2: Laws as First-Class Citizens, Phase 7: Performance)
markers = [
    "law(name): mark test as category law verification",
    "law_identity: tests identity law (Id >> f == f == f >> Id)",
    "law_associativity: tests associativity ((f >> g) >> h == f >> (g >> h))",
    "law_functor_identity: tests functor identity (fmap id == id)",
    "law_functor_composition: tests functor composition (fmap (g.f) == fmap g . fmap f)",
    "slow: mark test as slow-running (>1s)",
    "integration: mark test as integration test (multi-component)",
    "unit: mark test as unit test (single component)",
    "external: mark test as requiring external services",
    "accursed_share: mark test as exploratory/chaos (Phase 5)",
    "property: mark test as property-based (Phase 3)",
]
