[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kgents-runtime"
version = "1.0.0"
description = "kgents reference implementation - bootstrap agents and runtime"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agents", "ai", "composition", "category-theory"]
authors = [
    { name = "Kent" }
]
dependencies = [
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "textual>=0.89.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.6",
    "watchdog>=3.0.0",
    # Observability (OpenTelemetry)
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-asyncio>=0.45b0",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
migrations = [
    "alembic>=1.13.0",
    "greenlet>=3.0.0",  # Required for async SQLAlchemy
]
brain = [
    "sentence-transformers>=2.2.0",  # High-quality semantic embeddings for Holographic Brain
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
]
textgrad = [
    "textgrad>=0.1.0",  # Automatic differentiation via text for LLM optimization
]

[tool.hatch.build.targets.wheel]
packages = ["bootstrap", "agents", "runtime", "protocols"]

[project.scripts]
kg = "protocols.cli.hollow:main"
kgents = "protocols.cli.hollow:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not tier3",  # Skip tier3 (E2E) tests by default
]
# Test Optimization: Run pytest with --profile-tests to enable profiling
# Example: pytest --profile-tests --show-recommendations
# Profiles are stored in .kgents/ghost/test_profiles.jsonl
# See plans/skills/test-optimization.md for details
# Suppress PytestCollectionWarning for dataclass/enum classes that start with "Test" or similar
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
# Custom markers for test categorization (Phase 2: Laws as First-Class Citizens, Phase 7: Performance)
# Test Tiers:
#   tier1: Unit tests (pure functions, no I/O, no mocks) - target <30s total
#   tier2: Integration tests (mocked external deps) - target <5m total
#   tier3: E2E tests (real external services like K8s) - variable time
markers = [
    "tier1: Unit tests (pure functions, no I/O, no mocks)",
    "tier2: Integration tests (mocked external deps)",
    "tier3: E2E tests (real external services like K8s cluster)",
    "law(name): mark test as category law verification",
    "law_identity: tests identity law (Id >> f == f == f >> Id)",
    "law_associativity: tests associativity ((f >> g) >> h == f >> (g >> h))",
    "law_functor_identity: tests functor identity (fmap id == id)",
    "law_functor_composition: tests functor composition (fmap (g.f) == fmap g . fmap f)",
    "slow: mark test as slow-running (>1s)",
    "integration: mark test as integration test (multi-component)",
    "unit: mark test as unit test (single component)",
    "external: mark test as requiring external services",
    "accursed_share: mark test as exploratory/chaos (Phase 5)",
    "property: mark test as property-based (Phase 3)",
    "e2e: end-to-end Kubernetes tests (require kind cluster) - DEPRECATED, use tier3",
]

[dependency-groups]
dev = []

# Note: mypy configuration is in mypy.ini - it provides more granular control
