[project]
name = "zen-agents"
version = "0.1.0"
description = "Zenportal reimagined through kgents"
requires-python = ">=3.13"
dependencies = [
    "kgents-bootstrap",
    "textual>=0.47",
]

[project.scripts]
zen-agents = "zen_agents.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zen_agents", "pipelines"]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.uv.sources]
kgents-bootstrap = { path = "../claude-openrouter", editable = true }
