[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zen-agents"
version = "0.1.0"
description = "A contemplative TUI for managing parallel AI sessions"
requires-python = ">=3.11"
license = "MIT"
keywords = ["tui", "ai", "agents", "tmux", "claude"]
authors = [
    { name = "Kent" }
]
dependencies = [
    "textual>=0.40.0",
]

# Dev note: Also install kgents-runtime from ../claude-openrouter
# pip install -e ../claude-openrouter

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
zen-agents = "zen_agents.app:main"

[tool.hatch.build.targets.wheel]
packages = ["zen_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
