[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kgents-categorical-foundation"
version = "0.1.0"
description = "Category Theory for the People - Mathematical foundations made accessible"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kent Gang", email = "kent@kgents.dev" },
]
keywords = [
    "category-theory",
    "state-machines",
    "operad",
    "sheaf",
    "governance",
    "agents",
    "composition",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
galois = [
    "bert-score>=0.3.0",
    "transformers>=4.0.0",
]
all = [
    "bert-score>=0.3.0",
    "transformers>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kentgang/kgents"
Documentation = "https://github.com/kentgang/kgents/tree/main/impl/claude/shared-primitives"
Repository = "https://github.com/kentgang/kgents"

[tool.hatch.build.targets.wheel]
packages = [
    "kgents_poly",
    "kgents_operad",
    "kgents_sheaf",
    "kgents_laws",
    "kgents_galois",
    "kgents_governance",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
